1.2.1i4:
    Core:
    * Better exception handling when executing "Check_MK"-Check. Printing python
      exception to status output and traceback to long output now.
    * Added HOSTTAGS to notification macros which contains all Check_MK-Tags
      separated by spaces
    * Output better error message in case of old inventory function

    Notifications:
    * Fix flexible notifications on non-OMD systems
    
    Checks & Agents:
    * Linux Agent, mk_postgres: Supporting pgsql and postgres as user
    * Linux Agent, mk_postgres: Fixed database stats query to be compatible
      with more versions of postgres
    * apache_status: Modified to be usable on python < 2.6 (eg RHEL 5.x)
    * apache_status: Fixed handling of PIDs with more than 4 numbers
    * FIX: postgres_sessions: handle case of no active/no idle sessions
    * FIX: correct backslash representation of windows logwatch files
    * Add: New Check for Rittal CMC PSM-M devices
    * Smart plugin: Only use relevant numbers of serial
    * FIX: postgres_sessions: handle case of no active/no idle sessions
    * Add: ibm_xraid_pdisks - new check for agentless monitoring of disks on IBM SystemX servers.
    * Add: hp_proliant_da_cntlr check for disk controllers in HP Proliant servers
    * Add: Check to monitor Storage System Drive Box Groups attached to HP servers
    * Add: check to monitor the summary status of HP EML tape libraries
    * Add: apc_rackpdu_status - monitor the power consumption on APC rack PDUs
    * Add: sym_brightmail_queues - monitor the queue levels on Symantec Brightmail mail scanners.
    * Add: plesk_domains - List domains configured in plesk installations
    * Add: plesk_backups - Monitor backup spaces configured for domains in plesk
    * Add: mysql_connections - Monitor number of parallel connections to mysql daemon
    * FIX: zfsget: fix exception on snapshot volumes (where available is '-')
    * FIX: loading notification scripts in local directory for real